# AI-engineering-training

./: .gitignore  README.md  config.py  prompts.py  pyproject.toml  tools.py
notebooks/: multi_agent_travel_planner-exercise.ipynb  multi_agent_travel_planner.ipynb  patterns.ipynb  tool_and_memory.ipynb
slides/: azure_openai_architecture.md
specs/: multi_agent_travel_planner.md
