[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ai-training"
version = "0.1.0"
description = "Agentic AI training material and examples."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.13.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "openai>=2.32.0",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
]

[tool.setuptools]
py-modules = ["config", "prompts"]
